--- a/public/assignments/index.html
+++ b/public/assignments/index.html
@@ -583,7 +583,7 @@
 </ul>
 <hr />
 <p><a href="../../files/MBAS%20821%20Assignment%201.docx">Assignment 1 Questions</a> <a href="../../files/MBAS%20821%20Assignment%201%20-%20Answer%20Key.docx">Answer Key</a></p>
-<p><a href="../../files/MBAS%20821%20Assignment%202.docx">Assignment 2 Questions</a></p>
+<p><a href="../../files/MBAS%20821%20Assignment%202.docx">Assignment 2 Questions</a> <a href="../../files/MBAS%20821%20Assignment%202%20-%20Answer%20Key.docx">Answer Key</a> <a href="../../files/Assignment%202%20excel.xlsx">Excel</a></p>
 
     </div>
 
