final answer key uploaded

--- a/content/Course/index.html
+++ b/content/Course/index.html
@@ -14,3 +14,4 @@ output:
 <p><a href="../../files/Exam%20Instruction.docx">What you should know for the exam</a></p>
 <p>Formula Sheet for Final <a href="/files/formula-sheet.html" target="_blank">html</a> <a href="/files/formula sheet.pdf" target="_blank">PDF</a></p>
 <p>Practice MC Questions <a href="/files/Practice MC/mc.html" target="_blank">html</a> <a href="/files/Practice MC/mc.pdf" target="_blank">PDF</a></p>
+<p><a href="../../files/MBAS%20821%20Final%20Exam%20-%20Answer%20and%20Marking%20Scheme.zip">Final Exam Answer Key and Marking Scheme</a></p>
