--- a/public/course/index.html
+++ b/public/course/index.html
@@ -32,7 +32,8 @@ Excel Tutorial
 Problem Sets and Answers
 What you should know for the exam
 Formula Sheet for Final html PDF
-Practice MC Questions html PDF">
+Practice MC Questions html PDF
+Final Exam Answer Key and Marking Scheme">
 
   
   <link rel="alternate" hreflang="en-us" href="/course/">
@@ -249,7 +250,8 @@ Excel Tutorial
 Problem Sets and Answers
 What you should know for the exam
 Formula Sheet for Final html PDF
-Practice MC Questions html PDF"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+Practice MC Questions html PDF
+Final Exam Answer Key and Marking Scheme"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
@@ -580,6 +582,7 @@ Practice MC Questions html PDF"><meta property="og:image" content="/images/icon_
 <p><a href="../../files/Exam%20Instruction.docx">What you should know for the exam</a></p>
 <p>Formula Sheet for Final <a href="/files/formula-sheet.html" target="_blank">html</a> <a href="/files/formula sheet.pdf" target="_blank">PDF</a></p>
 <p>Practice MC Questions <a href="/files/Practice MC/mc.html" target="_blank">html</a> <a href="/files/Practice MC/mc.pdf" target="_blank">PDF</a></p>
+<p><a href="../../files/MBAS%20821%20Final%20Exam%20-%20Answer%20and%20Marking%20Scheme.zip">Final Exam Answer Key and Marking Scheme</a></p>
 
     </div>
 
